# Hawk-GUI

./: .gitignore  .gitmodules  Cargo.toml  Makefile  Pipfile  Rocket.toml  config.example.toml  manage.py  report-example.json
.github/workflows/: ci.yml  ci_hawk_processing.yml
examples/: report-example-full.json  report-example.json
hawk/: settings.py  urls.py  wsgi.py
hawk/settings/: base.py  dev.py  prod.py
hawk_gui/: __init__.py  admin.py  apps.py  context_processors.py  models.py  urls.py  views.py
hawk_gui/management/commands/: generate_sprite.py  reprocess_reports.py  update_from_filesystem.py
hawk_gui/migrations/: 0001_initial.py  0002_add_uuid_field_to_report.py  0003_minecraft_version_is_nullable.py  0004_non_editable_report_fields.py  0005_slugs_are_height_char_long.py  0006_store_title_in_report_model.py  0007_add_index_to_reports.py  0008_allow_longer_slugs.py
hawk_gui/templates/: base.html  report.html
hawk_gui/templates/layout/: footer.html  header.html  language_selector.html  tabs.html
hawk_gui/templates/partials/: hearts.html  language_selector.html  player.html
hawk_gui/templates/partials/statistics/: statistics.html  sub-list.html
hawk_gui/templates/partials/tooltips/: damage.html  heal.html  item.html  player.html  player_title.html  weapon.html
hawk_gui/templates/sections/: damages.html  statistics.html  summary.html
hawk_gui/templates/sections/statistics/: section.html
hawk_gui/templatetags/: captureas.py  hawk_ui.py  hawk_utils.py  minecraft.py
hawk_processing/: lib.rs  minecraft.rs
hawk_processing/report/: aggregates.rs  errors.rs  event.rs  mod.rs  player.rs  raw.rs  report.rs
locale/fr/LC_MESSAGES/: django.mo  django.po
locale/it/LC_MESSAGES/: django.mo  django.po
src/: lib.rs  main.rs  minecraft.rs  report.rs  report_raw.rs  serde_instant.rs  tera.rs
src/report/: aggregates.rs  damage.rs  errors.rs  event.rs  heal.rs  item.rs  mod.rs  player.rs  raw.rs  report.rs  settings.rs  team.rs
src/report/test/: mod.rs
static/scss/: hawk.scss  uhcreloaded-reports.scss
static/scss/reports/: _fonts.scss  _language_selector.scss  _report.scss  report.scss
static/sprites/: icons.json
static/sprites-source/: scssize-sprites.py
templates/: 503.html  __macros__.html.tera  report.html.tera
(+50 files in other folders)
