[package]
name = "uhcreloaded-reports"
version = "0.1.0"
authors = ["Amaury Carrade <amaury@carrade.eu>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
error-chain = "0.12.*"
failure = "0.1.*"
failure_derive = "0.1.*"
reqwest = "0.9.*"
rocket = "0.4.*"
rocket_contrib = { version = "0.4.*", default-features = false, features = ["json", "serve", "tera_templates", "uuid"]}
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
strum = "0.13.*"
strum_macros = "0.13.*"
uuid = { version = "0.7", features = ["serde", "v4"] }

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "uhcreloaded_reports"
path = "src/main.rs"
