[package]
name = "hawk"
version = "0.2.0"
authors = ["Amaury Carrade <amaury@carrade.eu>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.*", features = ["serde"] }
error-chain = "0.12.*"
failure = "0.1.*"
failure_derive = "0.1.*"
pyo3 = { version = "0.7.0", features = ["extension-module"] }
roman = "0.1.*"
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
strum = "0.13.*"
strum_macros = "0.13.*"
uuid = { version = "0.7.*", features = ["serde", "v4"] }

[lib]
name = "hawk_processing"
path = "hawk_processing/lib.rs"
crate-type = ["cdylib"]
