[package]
name = "hawk"
version = "0.2.0"
authors = ["Amaury Carrade <amaury@carrade.eu>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.*", features = ["serde"] }
error-chain = "0.12.*"
failure = "0.1.*"
failure_derive = "0.1.*"
insta = { version = "1.3.*", features = [ "glob"] }
lazy_static = "1.4.*"
pyo3 = { version = "0.13.*", features = ["extension-module"] }
regex = "1.4.*"
roman = "0.1.*"
serde = "1.0.*"
serde_json = "1.0.*"
serde_derive = "1.0.*"
strum = "0.20.*"
strum_macros = "0.20.*"
uuid = { version = "0.8.*", features = ["serde", "v4"] }

[lib]
name = "hawk_processing"
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.maturin]
classifier = [
    "Development Status :: 4 - Beta",
    "License :: CeCILL-B Free Software License Agreement (CECILL-B)",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Rust",
]
